2009-01-11  Hans Breuer  <hans@breuer.org>

	[make "make distcheck" work again]
	* objects/FS/flow-poly.c : obsolete, finally removed
	* po/POTFILES.in : added app/create_object.c
	* po/POTFILES.skip : added some *.py to stop complains
	* configure.in : default is no doc creation ...
	* hardcopies.make : ... and thus not touching read-only directories.
	Lowers the priority of bug #567385

	* lib/dia_svg.c(read_text_svg) : support for text alignment, less 
	warnings and text colors corrected even for DIA_SVG_COLOUR_NONE
	(read_items) : switched from if-continue to a more common if-else-if
	* plug-ins/svg/svg-import.c : use DIA_SVG_COLOUR_NONE instead of (-1)

	* plug-ins/svg/svg-import.c(read_text_svg) : the text style was not
	properly intialize leading e.g. to random text colors.
	Also it now supports multi-line text elements "<tspan/>". Both can
	be booked under bug #108502 - but that bug will never get fixed;)

	* plug-ins/render_svg.c(draw_text) : implementation supporting 
	multi-line text via <tspan/>

2009-01-10  Hans Breuer  <hans@breuer.org>

	* objects/standard/arc.c(arc_move_handle) : maintain a minimum 
	distance between the three arc handles. Two or even all three 
	handles in at the same position did produce unstable results.
	As a side-effect this is fixing bug #501696
	* objects/standard/outline.c(outline_move_handle) : maintain
	minimum distance between the two handles here as well. 
	Otherwise a meaningless font-size of zero could occur.

2009-01-09  Hans Breuer  <hans@breuer.org>

	* plug-ins/xslt/Makefile.am : if !HAVE_XSLT prevent installation 
	bug #566842

	* lib/propobject.c(object_list_get_propdescriptions) : for single 
	object in the list use the "intersection" because otherwise props
	with PROP_FLAG_DONT_MERGE would not be accessible anymore, e.g. 
	for "Standard - Outline" there was no way to change the text anymore
	(hopefully final regression introduced by fixing bug #60331)
