@@ -23,12 +23,13 @@
 #include <stdio.h>
 #include <string.h>
 #include <math.h>
+#ifdef GNOME
+#undef GTK_DISABLE_DEPRECATED
+#include <gnome.h>
+#endif
 #include <gtk/gtk.h>
 #include <gdk/gdkkeysyms.h>
 
-#ifdef GNOME
-#include <gnome.h>
-#endif
 #include "display.h"
 #include "diagram.h"
 #include "tool.h"
